重新調整ajax及頁面載入方式

--- a/src/main/resources/static/css/_custom.css
+++ b/src/main/resources/static/css/_custom.css
@@ -67,3 +67,10 @@
         center;
     }
 }
+
+/*彈出式互動視窗背景*/
+.modal-bg {
+    background-image: url('../images/_section_bg.png');
+    background-repeat: repeat;
+    background-position: center;
+}
