--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -121,14 +121,6 @@
             background-color: #424242;
         }
 
-        /*彈出式互動視窗背景*/
-        .modal-content.modal-bg {
-            background-image: url('/images/_section_bg.png');
-            background-repeat: repeat;
-            background-position: center;
-            /*background-color: white;*/
-        }
-
         /*區塊陰影效果*/
         .div-style {
             background-color: rgba(255, 255, 255, 1);
@@ -231,10 +223,10 @@
                     <option value="default">全部分類</option>
                 </select>
             </div>
-<!--            <div class="p-1">-->
-<!--                <select class="custom-select" name="category" id="category">-->
-<!--                </select>-->
-<!--            </div>-->
+            <!--            <div class="p-1">-->
+            <!--                <select class="custom-select" name="category" id="category">-->
+            <!--                </select>-->
+            <!--            </div>-->
             <div class="p-1">
                 <input type="text" class="custom-select" id="inputBox" placeholder="查詢標題或內文"
                        style="background-image: none;">
@@ -299,8 +291,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="modal-body"
-                         style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
+                    <div class="modal-body" style="border-top: 3px dotted grey;">
                         <div class="row mx-auto mb-3 p-3 col-lg-10 col-12 justify-content-center div-style">
                             <!-- 瀏覽文章內文區塊 -->
                             <div class="row m-0 px-3 col-12" style="border-bottom: 1px solid lightgrey;">
@@ -321,8 +312,8 @@
                             </div>
                             <!-- 瀏覽文章按鈕區塊 -->
                             <div class="m-0 p-0 col-12">
-                            <span id="conTent" class="col-12" contenteditable="false">文章內文</span>
-                            <span id="loginButton" class="mt-1 text-right" style="display: none;">
+                                <span id="conTent" class="col-12" contenteditable="false">文章內文</span>
+                                <span id="loginButton" class="mt-1 text-right" style="display: none;">
                                     <!-- 自訂屬性 articleId -->
                                     <button id="editButton" articleId=""
                                             class="btn btn-primary ftco-animate">編輯</button>
@@ -408,7 +399,8 @@
                             <!-- 文章內容 -->
                             <div class="m-0 p-0 col-12">
                                 <textarea id="postContent" oninput="setTextAreaHeight(this);"
-                                          class="px-4 col-12" placeholder="&#10;※發文宣導※&#10;&#10;● 不違反善良風俗。&#10;● 禁止標題與內文不符。&#10;● 不要進行人身攻擊，小心無意間觸法。&#10;● 推廣正面發文風氣，從你我做起。"></textarea>
+                                          class="px-4 col-12"
+                                          placeholder="&#10;※發文宣導※&#10;&#10;● 不違反善良風俗。&#10;● 禁止標題與內文不符。&#10;● 不要進行人身攻擊，小心無意間觸法。&#10;● 推廣正面發文風氣，從你我做起。"></textarea>
                             </div>
                         </div>
                     </div>
@@ -453,16 +445,8 @@
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/scrollax.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/_animal-init.js"></script>
 <script src="js/pageController.js"></script>
-<script>
-    <!-- 讀取頁首及頁腳 -->
-    $("#header-page").load("/header", function () {
-        // 取消非同步執行 讀取完 header 後再取得 title 名稱放入迷你導覽列
-        $("#page-title").text($("title")[0].innerText);
-    });
-    $("#footer-page").load("/footer");
-</script>
-
 <script type="text/javascript">
     var limit;
     var pages;
@@ -471,7 +455,6 @@
         $.ajax({//取得所有文章
             type: "GET",
             url: "/forumArticles",
-            async: false,
             success: function (data) {
                 getForumArticleList(data);
             }
@@ -504,14 +487,44 @@
     });
 
 
+    // 傳入 id 並回傳 userData 使用者資訊
+    // 其為多個 ajax 的依賴 此處須設定非同步執行
+    function getUserInfo(id) {
+        var rsData;
+        $.ajax({//使用userId，查詢user資訊
+            type: "GET",
+            url: "/user/" + id,
+            async: false,
+            success: function (data) {
+                rsData = data;
+            }
+        });
+        return rsData;
+    }
+
+    //傳入文章 id 並回傳 messageData 留言
+    // 其為多個 ajax 的依賴 此處須設定非同步執行
+    function getMessageInfo(id) {
+        var rsData;
+        $.ajax({//使用userId，查詢user資訊
+            type: "GET",
+            url: "/message?articleId=" + id,
+            async: false,
+            success: function (data) {
+                rsData = data;
+            }
+        });
+        return rsData;
+    }
+
     function getForumArticleList(data) {//秀出搜尋結果
         $("#tableAjax").empty();//清空元素
 
         var title = `
             <tr class='h5'>
-                <th style='width: 10%;'><div>分類</div></th>
-                <th style='width: 10%;'><div>標題</div></th>
-                <th style='width: 20%;'><div></div></th>
+                <th style='width: 5%;'><div>分類</div></th>
+                <th style='width: 20%;'><div>標題</div></th>
+                <th style='width: 20%;'><div>摘要</div></th>
                 <th style='width: 10%;'><div>作者</div></th>
                 <th style='width: 5%;'><div>留言</div></th>
 <!--                <th style='width: 10%;'><div>讚/瀏覽</div></th>-->
@@ -537,7 +550,7 @@
                     </td>
                     <td>
                         <div id="${item.articleId}" onclick='getArticleInfo($(this).attr("id"))' style="cursor: pointer;" data-toggle='modal' data-target='#browseModalCenter'>
-                            ${item.content.length > 10 ? item.content.slice(0, 10) + "......" : item.content}
+                            ${item.content.length > 10 ? item.content.replaceAll("<br>", " ").slice(0, 10) + "…" : item.content.replaceAll("<br>", " ")}
                         </div>
                     </td>
                     <td><div>${userInfo.name}</div></td>
@@ -583,7 +596,7 @@
         console.log("文章ID: " + id);
         $.ajax({//使用文章id，查詢文章資訊
             type: "GET",
-            async: false,
+            // async: false,
             url: "/forumArticles/" + id,
             success: function (articleData) {
                 // 傳入userId，取得使用者資訊
@@ -652,35 +665,10 @@
                         }
                     });
                 }
+                // 置於 ajax 最末段執行 以動畫淡入效果刷新留言
+                $.getScript('js/main.js');
             }
         });
-        $.getScript('js/main.js');
-    }
-
-    function getUserInfo(id) {//傳入id，回傳userData
-        var rsData;
-        $.ajax({//使用userId，查詢user資訊
-            type: "GET",
-            url: "/user/" + id,
-            async: false,
-            success: function (data) {
-                rsData = data;
-            }
-        });
-        return rsData;
-    }
-
-    function getMessageInfo(id) {//傳入文章id，回傳userData留言
-        var rsData;
-        $.ajax({//使用userId，查詢user資訊
-            type: "GET",
-            url: "/message?articleId=" + id,
-            async: false,
-            success: function (data) {
-                rsData = data;
-            }
-        });
-        return rsData;
     }
 
     function getType(type) {
@@ -689,6 +677,7 @@
         listPage = 1;
         changePage(listPage);
     }
+
     function getArticle(id) {
         var rsData;
         $.ajax({//使用文章id，查詢文章資訊
@@ -758,8 +747,8 @@
             $("#postModalCenter").modal("show");
         } else {
             if (confirm('尚未登入會員，是否前往登入?') == true) {
-                window.location.href = '/login_register';
-            }else {
+                window.location.replace("/login_register");
+            } else {
                 return
             }
         }
@@ -829,7 +818,8 @@
 
         var type = $("#articleTypeEdit").val();
         var title = $("#articleTitle").text();
-        var content = $("#conTent").html();
+        // 將 span 的<div>換行轉為<br>換行
+        var content = $("#conTent").html().replaceAll("<div>", "<br>").replaceAll("</div>", "");
         var articleId = $("#saveButton").attr("articleId");
         console.log("編輯按鈕:" + articleId);
         console.log(type);
@@ -970,8 +960,8 @@
         // 已登入才可留言
         if (user == null) {
             if (confirm('尚未登入會員，是否前往登入?') == true) {
-                window.location.href = '/login_register';
-            }else {
+                window.location.replace("/login_register");
+            } else {
                 return
             }
         }
