--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -36,17 +36,6 @@
             opacity: 1;
         }
 
-        /*ICON自訂樣式*/
-        .fa-icon {
-            color: orange;
-            /*background: lightgrey;*/
-            /*text-align: center;*/
-            padding-top: 0.5rem;
-            /*min-width: 13%;*/
-            /*border-top-left-radius: 0.5rem !important;*/
-            /*border-bottom-left-radius: 0.5em !important;*/
-        }
-
         /*顯示物件-滑鼠掠過顏色*/
         .published:hover .text, .published:focus .text {
             color: rgba(255, 255, 255, 0.8);
@@ -141,7 +130,7 @@
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
-                <div class="modal-content main-img">
+                <div class="modal-content modal-bg">
                     <!-- 寵物名字放在標題 -->
                     <div class="modal-header">
                         <!-- 標題定位用左區塊 -->
@@ -149,9 +138,9 @@
                         </div>
                         <!-- 標題定位用主區塊 -->
                         <div class="col-4 px-0 d-flex justify-content-center">
-                            <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
+                            <span class="py-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
                             <h3 class="modal-title font-weight-bold" id="animalName_static">這裡是寵物名字</h3>
-                            <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
+                            <span class="py-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
                         </div>
                         <!-- 標題定位用右區塊 -->
                         <div class="col-4 px-0">
@@ -280,16 +269,8 @@
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/scrollax.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/_animal-init.js"></script>
 <script src="js/pageController.js"></script>
-<script>
-    <!-- 讀取頁首及頁腳 -->
-    $("#header-page").load("/header", function (){
-        // 取消非同步執行 讀取完 header 後再取得 title 名稱放入迷你導覽列
-        $("#page-title").text($("title")[0].innerText);
-    });
-    $("#footer-page").load("/footer");
-</script>
-
 <script>
     var limit;
     var pages;
