--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -235,16 +235,16 @@
 
                 <!-- 下拉選單 -->
                 <li class="nav-item dropdown">
-                    <span class="nav-link dropdown-toggle" data-toggle="dropdown">會員登入</span>
+                    <span class="nav-link dropdown-toggle" data-toggle="dropdown">會員中心</span>
                     <div class="dropdown-menu">
                         <a id="login" class="dropdown-item" href="/login_register"
                            style="border-radius: 0 0 0.5rem 0.5rem">登入</a>
-                        <a id="sign_out" class="dropdown-item" href="/sign_out" style="display: none;">登出</a>
-                        <a id="userManagement" class="dropdown-item" href="/user_management" style="display: none;">會員資料變更</a>
-                        <a id="publish" class="dropdown-item" href="/publish" style="display: none;">會員刊登送養</a>
-                        <a id="forum" class="dropdown-item" href="/forum" style="display: none;">會員刊登文章</a>
+                        <a id="userManagement" class="dropdown-item" href="/user_management" style="display: none;">會員資料</a>
+                        <a id="publish" class="dropdown-item" href="/publish" style="display: none;">我想 送養/協尋</a>
                         <a id="userPublishHistory" class="dropdown-item" href="/user_publish_history"
-                           style="display: none;">送養資訊管理</a>
+                           style="display: none;">我的刊登</a>
+                        <a id="forum" class="dropdown-item" href="/forum" style="display: none;">會員刊登文章</a>
+                        <a id="sign_out" class="dropdown-item" href="/sign_out" style="display: none;">登出</a>
                     </div>
                 </li>
             </ul>
