刊登後資料庫圖片檔名重抓、圖片寫入相對路徑參數更改

--- a/src/main/resources/templates/missing.html
+++ b/src/main/resources/templates/missing.html
@@ -62,60 +62,54 @@
 <div id="header-page"></div>
 
 <section class="ftco-section main-img">
-<hr>
-<div style="margin: auto; width: 800px;">
-    物種 :
-    <select name="animalKind" id="kind">
-        <option>不分種類</option>
-        <option>狗</option>
-        <option>貓</option>
-        <option>其他</option>
-    </select>
-    性別 :
-    <select name="animalSex" id="sex">
-        <option>不分種類</option>
-        <option>公</option>
-        <option>母</option>
-    </select>
-</div>
-
-<section class="ftco-section bg-light">
+    <div class="container">
+        <div style="margin: auto; width: 800px;">
+            物種 :
+            <select name="animalKind" id="kind">
+                <option>不分種類</option>
+                <option>狗</option>
+                <option>貓</option>
+                <option>其他</option>
+            </select>
+            性別 :
+            <select name="animalSex" id="sex">
+                <option>不分種類</option>
+                <option>公</option>
+                <option>母</option>
+            </select>
+        </div>
+    </div>
     <div class="container">
         <div class="row" id="test1Result">
-
             <div class='col-md-6 col-lg-3 ftco-animate'>
-                           <div class='staff'>
-                                    <div class='img-wrap d-flex align-items-stretch'>
-                                           <div class='work mb-4 img d-flex align-items-end' style='background-image: url("imgUrl");'>
-                                             </div>
-                                    </div>
-                                    <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>
-                                          <h3 > animalName </h3>
-                                           <div class='faded'>
-                                                      <p>物種: animalKind </p>
-                                                        <p>品種:  animalVariety </p>
-                                                        <p>性別:  animalSex </p>
-                                                        <p>日期:  lastModifiedDate </p>
-                                           </div>
-
-                                    </div>
-                           </div>
+                <div class='staff'>
+                    <div class='img-wrap d-flex align-items-stretch'>
+                        <div class='work mb-4 img d-flex align-items-end' style='background-image: url("imgUrl");'>
+                        </div>
+                    </div>
+                    <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>
+                        <h3> animalName </h3>
+                        <div class='faded'>
+                            <p>物種: animalKind </p>
+                            <p>品種: animalVariety </p>
+                            <p>性別: animalSex </p>
+                            <p>日期: lastModifiedDate </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-
         </div>
     </div>
 </section>
 
 
-
 <div style="margin: auto; width: 800px;">
-    <p id="pageInfo"  class="1"> </p><br>
+    <p id="pageInfo" class="1"></p><br>
 
     <div id="ps" class="page_show">
-<!--        <span >上一頁</span>-->
-<!--        <span class="page_cur">1</span>-->
-<!--        <span>下一頁</span>-->
+        <!--        <span >上一頁</span>-->
+        <!--        <span class="page_cur">1</span>-->
+        <!--        <span>下一頁</span>-->
     </div>
 </div>
 <!-- 頁腳 -->
